speech function working

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
 h1{
     text-align:center;
 }
+#voices{
+    height:24px;
+}
 #togglebox{
     background-color:lightcoral;
     color:white;
@@ -19,18 +22,19 @@ h1{
 .xcontainer{
     text-align: center;
 }
-#xtextbox{
+.xtextbox{
     width:50%;
     position: absolute;
     top:20%;
     left:25%;
+    transform: translate(0%,-800px);
     background-color: #333;
     padding:10px;
     border-radius:3px;
     transition: all 0.5s ease-in-out;
 }
 .showbox{
-    transform: translate(0%,-800px);
+    transform: translate(0%, -10px);
 }
 #xtextbox select, textarea{
     width:100%;
