finished properly. added change voice options

--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ h1{
 #voices{
     height:24px;
 }
+#togglebox{
+    background-color:lightcoral;
+    color:white;
+    border:none;
+    border-radius:3px;
+    padding:5px;
+}
 .xcontainer{
     text-align: center;
 }
